# cpp-kata

./: .gitignore  CMakeLists.txt  Dockerfile  KataMain.cpp  README.md  docker_build.sh
Kata/: CMakeLists.txt  Kata.cpp  Kata.h  KataTest.cpp  KataTestMain.cpp
